Correcciones finales de LP

--- a/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/1. Expresiones.md
@@ -52,7 +52,25 @@ Ahora bien, los efectos colaterales se pueden evitar de la siguiente manera:
 
 #### Transparencia Referencial
 
-Es una característica de los programas que permite que dos expresiones que tienen el mismo valor, puedan sustituirse entre sí en cualquier parte del programa, sin afectar la acción del mismo. Este concepto está muy relacionado con los efectos colaterales, ya que una función se dice que posee transparencia referencial si no genera ningún efecto colateral. Este concepto es más que nada empleado por los lenguajes puramente funcionales, en donde el valor de una función depende del valor de los parámetros que se le pase, siendo cercano a las funciones matemáticas, lo cual hace que la semántica de los programas escritos en estos lenguajes sea mucho más fácil de entender.
+Es una característica de los programas que permite que dos expresiones que tienen el mismo valor, puedan sustituirse entre sí en cualquier parte del programa, sin afectar la acción del mismo. Hace referencia la propiedad de una ***función*** o ***expresión*** que garantiza que su resultado depende únicamente de sus argumentos y no de ningún estado o contexto externo. Se puede entender mucho mejor este concepto con el siguiente ejemplo:
+
+```python
+total = 0
+
+# Función con transparencia referencial
+def suma(a :int, b :int) -> int:
+	return a + b
+
+# Función con efecto colateral y sin transparencia referencial 
+def sum_total(a :int) -> int:
+	global total
+	total += a
+	return total
+```
+
+Como se puede apreciar en la función **suma_total**, el valor de retorno va a depender del valor de la variable **total**, por lo que esta función generará no solo un efecto colateral, ya que modifica esa variable, sino que tampoco posee transparencia referencial.
+Este concepto está muy relacionado con los efectos colaterales, puesto que una función se dice que posee transparencia referencial si no genera ningún efecto colateral. Este concepto es más que nada empleado por los lenguajes puramente funcionales, en donde el valor de una función depende del valor de los parámetros que se le pase, siendo cercano a las funciones matemáticas, lo cual hace que la semántica de los programas escritos en estos lenguajes sea mucho más fácil de entender.
+
 
 #### Sobrecarga de Operadores
 
