--- a/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
+++ b/3° Año/Lenguajes de Programación/Unidad 5/2. Sentencias.md
@@ -44,7 +44,7 @@ Una estructura de control no es más que una sentencia de control y el conjunto 
 	3. La forma de las sentencias que podrán ser ejecutadas cuando se cumpla la condición. Dichas sentencias pueden ser simples o compuestas, para este último caso el diseñador debe comenzar a pensar en introducir delimitadores de sentencia, como en el caso de los "***;***".
 
 >[!tldr] Selectores Anidados
->La mayoría de los lenguajes de programación permiten añadir sentencias de selección bidireccionales dentro de otras sentencias bidireccionales, esto atrae problemas de ambigüedad, como se vio en la [[1. Sintaxis#Características Generales de una Buena Sintaxis| Unidad 2]]. Para resolver eso, los lenguajes encontraron múltiples mecanismos mediante los cuales se puede solucionar el problema de ambigüedad:
+>La mayoría de los lenguajes de programación permiten añadir sentencias de selección bidireccionales dentro de otras sentencias bidireccionales, esto atrae problemas de ambigüedad, como se vio en la [[1. Sintaxis#Características Generales de una Buena Sintaxis| Unidad 2]]. Para resolver eso, los lenguajes encontraron múltiples formas para solucionar el problema de ambigüedad:
 >- Mediante las reglas de la semántica estática, por ejemplo en Pascal, el ***else*** formará parte del primer ***if*** que haya abierto.
 >- Uso de sentencias compuestas, por ejemplo en el caso de Perl, para delimitar una sentencia utiliza las llaves.
 >- Uso de delimitadores de sentencia, muchos lenguajes de programación utilizan los "**;**" al finalizar cada sentencia.
