--- a/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/1. Unidades.md
@@ -36,7 +36,7 @@ Ahora bien, el pasaje de parámetros posee cierta semántica, de la cual derivan
 
 ![[LP-semanticaParametros.png]]
 
-De estas distintas semánticas se desprenden los dos grandes modelos de pasajes de parámetros (modelos conceptuales) que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
+De estas distintas semánticas se desprenden los dos grandes modelos conceptuales de pasajes de parámetros que conocemos hoy en día, el pasaje ***por copia de valor*** y el pasaje ***por referencia***, que al mismo tiempo poseen variantes.
 
 - **Por copia de valor**: Este tipo de métodos es mucho más seguro, ya que se protege al parámetro real, con la desventaja de que a nivel de memoria es mucho más costoso.
 	- **Por valor**: El valor del parámetro real se copia en el formal y una vez se termina de ejecutar el parámetro real se mantiene intacto. Este tipo de pasaje de parámetros te  permite usar expresiones como parámetro real en el llamado a la unidad. Semántica ***in-mode***.
@@ -61,7 +61,7 @@ De estas distintas semánticas se desprenden los dos grandes modelos de pasajes 
 >El pasaje por posición es el más efectivo y seguro, pero se tiene que respetar el orden de pasaje de los parámetros. En cambio, el pasaje por nombres permite que los parámetros puedan ser pasados en cualquier orden, con la desventaja de que el programador debe conocer el nombre de los parámetros formales.
 #### Unidades como Parámetros
 
-Algunos lenguajes de programación permiten pasar unidades como parámetros de otras unidades, este tipo de cosas es más común entre lenguajes funcionales. Ahora bien, se debe tener en cuenta un par de aspectos a la hora de implementar este tipo de características, en primer lugar se debe saber como se va a realizar el chequeo de tipos al momento de llamar esa unidad dentro de la unidad llamada, además se debe pensar en como se va a resolver él referenciamiento a las variables no locales utilizadas en la unidad, para eso existen 3 mecanismos que pueden emplear los lenguajes de programación:
+Algunos lenguajes de programación permiten pasar unidades como parámetros de otras unidades, este tipo de cosas es más común entre lenguajes funcionales. Ahora bien, se debe tener en cuenta un par de aspectos a la hora de implementar este tipo de características, en primer lugar se debe saber como se va a realizar el chequeo de tipos al momento de llamar esa unidad dentro de la unidad llamada, además se debe pensar en como se va a resolver él referenciamiento a las variables no locales, para eso existen 3 mecanismos que pueden emplear los lenguajes de programación:
 
 - **Ligadura Superficial**: El entorno de referenciamiento tiene lugar en la unidad que realiza el llamado de la unidad pasada como parámetro.
 - **Ligadura Profunda**: El entorno de referenciamiento está compuesto por todas las variables que forman parte del entorno de definición de la unidad.
