--- a/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
+++ b/3° Año/Lenguajes de Programación/Unidad 6/2. Estructuras de Control a Nivel Unidad.md
@@ -25,7 +25,8 @@ Este tipo de unidades pueden ser planificadas para que su ejecución ocurra lueg
 2. Pueden estar condicionados por una expresión booleana -> ```call SubA when var == 0```.
 3. Condicionadas en base a una escala de tiempo -> ```call SubA at time = 50```.
 4. Condicionadas de acuerdo al orden de prioridad -> ```call SubA with priority 10```.
-Lo usan LP que hacen simulaciones discretas.
+
+Lo usan Lenguajes de Programación que hacen simulaciones discretas.
 ##### Paralelas
 
 Este tipo de unidades pueden ejecutarse simultáneamente, son conocidas normalmente como ***Tareas*** o ***Procesos***, para que este tipo de unidades puedan ser ejecutadas se tienen que cumplir una serie de condiciones, primero el equipo en donde se lo va a ejecutar debe poseer una arquitectura multiprocesador o multi-núcleo (o sistema distribuido o paralelos), en segundo lugar el sistema operativo de esa máquina debe reconocer y detectar los hilos y por último el lenguaje de programación debe proveer los mecanismos y herramientas necesarios para que el programador puede realizar tareas en paralelo. Por ejemplo, Java con la clase *Threads* y ADA con las *Tasks*.
