Correcciones menores en MS seccion de Reingenieria

--- a/3° Año/Metodología de Sistemas I/Unidad 11/1. Calidad.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 11/1. Calidad.md
@@ -79,17 +79,21 @@ Debido a que no existe un proceso de software “ideal” o “estándar” que 
 >[!note] Nota
 >Es imposible hacer mejoras de proceso que optimicen simultáneamente todos los atributos de proceso.
 
+### El Paradigma GQM
+
 Basili y Rombach (1988) proponen utilizar el paradigma ***GQM*** (Goal-Question-Metric) en la mejora de procesos para ayudar a responder tres preguntas fundamentales: ¿Por qué se introduce la mejora de procesos? ¿Qué información se necesita para ayudar a identificar y valorar las mejoras? ¿Qué mediciones de proceso y producto se requieren para obtener esta información?.
 
 - **Metas**: son los objetivos que pretende lograr la organización. No debe ocuparse directamente de los atributos del proceso, sino más bien de cómo el proceso afecta a los productos o a la organización en sí.
 - **Preguntas**: Se trata de mejoras de las metas, en las que se identifican áreas específicas de incertidumbre relacionadas con las metas.
 - **Métricas**: Se trata de mediciones que deben recopilarse para ayudar a responder las preguntas y confirmar si las mejoras del proceso lograron o no las metas deseadas.
 
+### Modelo CMM y CMMI
+
 A mediados de 1980, el SEI (Software Engineering Institute) desarrolló el Modelo de Madurez de Capacidades de Software, CMM por sus siglas en inglés, el cual tiene como objetivo estudiar los procesos de desarrollo de software de una organización y producir una evaluación de la madurez de la organización según una escala de cinco niveles. En este modelo, la madurez de un proceso es un indicador de la capacidad para construir un software de calidad.
 El CMMI es un modelo para la mejora de procesos que proporciona a las organizaciones los elementos esenciales para obtener procesos eficaces, es decir, define un marco de trabajo que las organizaciones pueden implementar de la forma que les parezca más conveniente, esto les permite definir las buenas prácticas que se van a adoptar. Este modelo está desarrollado bajo la premisa de que la calidad de un producto o servicio está determinada en gran medida por la calidad de los procesos que los producen y los mantienen. Para medir la calidad se tiene en cuenta los distintos modelos de madurez (ver en filmina los niveles porque no los considero tan relevantes), se puede medir la madurez de dos formas:
 
 - **En Etapas**: Se aplica los niveles de madurez a toda la organización.
-- **Continuo**: Se aplica los noveles de madurez a cada una de las áreas de procesos en particular.
+- **Continuo**: Se aplica los niveles de madurez a cada una de las áreas de procesos en particular.
 
 Las principales componentes del modelo CMMI son los siguientes:
 
