--- a/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
+++ b/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
@@ -36,7 +36,7 @@ En los congresos los trabajos son numerados por edición; constituyen publicacio
 >
 >##### El índice de Impacto
 >El índice de impacto de una revista es el número medio de veces que son citados en el año actual los artículos de esa revista publicados en los dos últimos años. Es un instrumento utilizado para revisar y evaluar la importancia relativa de una revista dentro de un mismo campo científico.
->El índice *H* es un sistema propuesto por Jorge Hirsch, de la universidad de California, para medir la calidad profesional de físicos y de otros científicos, en función de la cantidad de citas que han recibido sus artículos científicos. Se calcula ordenando de mayor a menor los artículos científicos según el número de citas recibidas, siendo el índice *H* el número en el que coinciden el número de orden con el número de citas, es decir, un científico tiene índice *H*, si ha publicado *H* trabajos con al menos *H* cintas cada uno.
+>El índice *H* es un sistema propuesto por Jorge Hirsch, de la universidad de California, para medir la calidad profesional de físicos y de otros científicos, en función de la cantidad de citas que han recibido sus artículos científicos. Se calcula ordenando de mayor a menor los artículos científicos según el número de citas recibidas, siendo el índice *H* el número en el que coinciden el número de orden con el número de citas, es decir, un científico tiene índice *H*, si ha publicado *H* trabajos con al menos *H* citas cada uno.
 
 ### Los Artículos o Papers
 
@@ -45,7 +45,7 @@ En general, cuando hablamos de artículos o papers nos referimos a artículos ac
 ##### Características del Artículo
 
 Los artículos deben estar cuidadosamente redactados para expresar de un modo claro y sintético lo que se pretende comunicar, debe poseer dos niveles de explicaciones del contenido, una formal y otra basada en intuiciones. Además de incluir las citas y referencias bibliográficas indispensables para contextualizar, justificar y verificar los antecedentes e ideas o datos previos contenidos en el trabajo.
-Debe exponer toda la información necesaria para poder entender y reducir los resultados originales que se dan a conocer en él, es decir, debería ser autocontenido. No hay que olvidar que este tipo de textos no son obras de divulgación y están destinados a un público con cocimientos especializados. Por lo general, el lector que no conozca lo esencial de las referencias puede tener dificultades de comprensión.
+Debe exponer toda la información necesaria para poder entender y reducir los resultados originales que se dan a conocer en él, es decir, debería ser autocontenido. No hay que olvidar que este tipo de textos no son obras de divulgación y están destinados a un público con conocimientos especializados. Por lo general, el lector que no conozca lo esencial de las referencias puede tener dificultades de comprensión.
 
 | Característica      | Descripción                                                                                                                                    | Criterios de Calidad                                                                                                                                                                                                                        |
 |--------------------|------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
