Acomodando unidad de Reingenieria - MS

--- a/3° Año/Metodología de Sistemas I/Unidad 8/2. Gestión de Procesos de Negocios.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 8/2. Gestión de Procesos de Negocios.md
@@ -1,7 +1,5 @@
 El organigrama es ampliamente utilizado para representar la estructura y funciones de una organización. En esta estructura de organización existe una comunicación jerárquica y vertical, esto acarrea una serie de problemas, como que se dificulta la comunicación interdepartamental para resolver problemas o realizar actividades, hay una carencia de visibilidad global y conocimiento de las operaciones, además de que es difícil de optimizar y adaptarse a los cambios con esta estructura.
 En los '80 y en los '90 surgieron nuevas tendencias de gestión organizacional que incrementaron el énfasis en analizar y definir la estructura de una organización por medio de los procesos de negocio, como por ejemplo, la Gestión de la Calidad de Procesos, BPR, etc.
-
-
 ## El Proceso de Negocios
 
 Un **proceso de negocio** es un conjunto de **actividades** ordenadas e interrelacionadas, que toman una o más entradas y crean una salida que es de **valor** para el cliente, con el propósito de alcanzar una **meta** organizacional de negocio. Según Dumas, un proceso de negocio es una colección de **eventos**, **actividades** y **puntos de decisión** interrelacionados que involucran a varios **actores** y **objetos** y que de forma conjunta llevan a un resultado que proporciona valor para al menos un cliente.
@@ -20,9 +18,9 @@ Cada uno de los procesos se basan en casos, donde cada caso es una ejecución es
 - **Salidas**: los objetos que son de valor para el cliente del proceso.
 - **Participantes externos**: los clientes del proceso y quienes interactúan con el proceso consumiendo o proveyendo información.
 
-![[MS-BPMN.png]]
+## La Gestión del Proceso de Negocios
 
-El BPM (Business Process Management) es una estrategia de mejoramiento continuo de los procesos de una organización. Aunque también puede verse como un cuerpo de **métodos**, **técnicas** y **herramientas** para identificar, descubrir, analizar, rediseñar, ejecutar y monitorear los procesos de negocios para optimizar su desempeño, cuyo principal objetivo es mejorar la eficiencia y rendimiento de la organización.
+La gestión del proceso de negocios, BPM (Business Process Management) por sus siglas en inglés, es una estrategia de mejoramiento continuo de los procesos de una organización. Aunque también puede verse como un cuerpo de **métodos**, **técnicas** y **herramientas** para identificar, descubrir, analizar, rediseñar, ejecutar y monitorear los procesos de negocios para optimizar su desempeño, cuyo principal objetivo es mejorar la eficiencia y rendimiento de la organización.
 La idea clave de BPM es centrarse en los procesos al organizar y gestionar el trabajo en una organización, es una representación explícita de los procesos de negocio. Esto posibilita el análisis, redefinición, mejorar y ejecución los procesos. No se trata de mejorar la forma en que se realizan las actividades individuales.
 
 #### Ciclo de Vida de la Gestión del Proceso de Negocios
