--- a/3° Año/Metodología de Sistemas I/Unidad 10/1. Diseño Centrado en el Usuario.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 10/1. Diseño Centrado en el Usuario.md
@@ -7,7 +7,7 @@
 Los objetivos de la IHC es desarrollar y mejorar la seguridad, utilidad, efectividad, eficiencia y usabilidad de los sistemas informáticos. Para crear sistemas usables se precisa:
 1. Comprender los factores psicológicos, ergonómicos, organizacionales y sociales que determinan cómo trabaja el usuario y hacer uso de las computadoras.
 2. Desarrollar herramientas y técnicas para ayudar al desarrollador de sistemas interactivos.
-3. Conseguir una interacción eficiente, efectivo y seguro, tanto o nivel individual como de grupo.
+3. Conseguir una interacción eficiente, efectiva y segura, tanto o nivel individual como de grupo.
 
 Los principales factores de la IHC, son el ***factor humano***, es decir, entender cuáles son las capacidades de los usuarios y los procesos involucrados durante el desarrollo de tareas a trevés de la computadora. Los ***factores tecnológicos***, que involucra comprender los avances tecnológicos en la computación y las telecomunicaciones. Y por último ***la interacción*** con el sistema, esto pueden ser mediante posicionamientos, selecciones, introducción de valores o texto, arrastres, entre otras.
 
@@ -18,7 +18,7 @@ Los principales factores de la IHC, son el ***factor humano***, es decir, entend
 
 ## Diseño Centrado en el Usuario (DCU)
 
-El diseño centrado en el usuario (DCU) es un proceso iterativo de desarrollo de software cuyo fin es obtener sistemas usables gracias a la participación activa de los usuarios. A mediando de los '80 Donald Norman resaltó dos aspectos que cambiaron el mundo del diseño, el primero es la usabilidad del producto y el segundo es incorporar las necesidades e intereses reales del usuario.
+El diseño centrado en el usuario (DCU) es un proceso iterativo de desarrollo de software cuyo fin es obtener sistemas usables gracias a la participación activa de los usuarios. A mediando de los '80 Donald Norman resaltó dos aspectos que cambiaron el mundo del diseño, el primero es la **usabilidad** del producto y el segundo es **incorporar las necesidades e intereses reales del usuario** en los sistemas de software.
 
 >[!tldr] Concepto de Usabilidad - ISO 9241
 >"*Grado en el que un sistema, producto o servicio puede ser usado por usuarios específicos para conseguir metas específicas con eficacia, eficiencia y satisfacción en un contexto de uso específico*"
@@ -39,7 +39,7 @@ Los elementos básicos del DCU son la participación activa del usuario en el pr
 
 ### Técnicas de Prototipado
 
-Los [[1. Prototipos]] son herramientas que simulan o en la que se implementan partes del sistema que se está desarrollando, incluyendo fundamentalmente la interfaz. Un prototipo debe ser construido en poco tiempo, es fácil de modificar, y son útiles para refinar el diseño, porque muestra cómo será la interacción entre el usuario y el sistema, creando un lenguaje común entre usuarios y desarrolladores, ayudando a clarificar las ideas en cuanto al diseño.
+Los [[1. Prototipos|Prototipos]] son herramientas que simulan o en la que se implementan partes del sistema que se está desarrollando, incluyendo fundamentalmente la interfaz. Un prototipo debe ser construido en poco tiempo, es fácil de modificar, y son útiles para refinar el diseño, porque muestra cómo será la interacción entre el usuario y el sistema, creando un lenguaje común entre usuarios y desarrolladores, ayudando a clarificar las ideas en cuanto al diseño.
 Algunas técnicas hacen énfasis en la presentación o apariencia de la interfaz, mientras que otras lo hacen en la interacción. Todas son útiles, en mayor o menor medida, de acuerdo con la complejidad del sistema y la incertidumbre que exista respecto a los requerimientos. Sus características dependen del propósito para el que fue creado y del grado de avance en el proceso de desarrollo.
 Algunas de las técnicas de prototipado más utilizadas son las siguientes:
 
