Corrección del SCUM y se agrego algo de info mas a lo de Teze

--- a/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
+++ b/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
@@ -2,8 +2,9 @@
 La forma en que se comunican los resultados de una investigación es mediante la elaboración de artículos (papers) y su publicación. Dichos papers pueden ser publicados en distintos lugares, como, por ejemplo, en workshops, conferencias o revistas científicas; pero también existen otros métodos que se pueden utilizar para publicar un trabajo de investigación, tal como los reportes técnicos, libros o incluso tesis.
 El impacto de la comunicación es gradual y toda investigación debería someterse a un proceso gradual de ***publicación, revisión y mejora***; hasta alcanzar su publicación en revistas indexadas. La elección del foro de publicación depende de varios factores, como lo podrían ser la calidad o impacto del resultado a mostrar, la necesidad de producción (presentación de informes, becas), plazos de entrega o aspectos mundanos como disponibilidad de fondos para viajar a presentar el artículo.
 
-## Porque Comunicar y Como Hacerlo
+### Porque Comunicar y Como Hacerlo
 
+La comunicación es necesaria, debido a que una buena política está basada en una buena comunicación, debemos pensar que cada persona puede ser alguien interesado en esto. Además, no estamos solos, no somos únicos y es necesario ser parte del debate de la comunidad.
 El éxito de un trabajo de investigación depende de la calidad del mismo y sus resultados, y de cuánto hemos hecho para que se note. La visibilidad de nuestro trabajo, al mismo tiempo, depende de cuan bien lo hemos promocionado. Y el impacto del éxito se medirá en función de si existen líneas de investigación para el futuro o si obtiene una repercusión en la comunidad científica.
 En general, cuando hablamos de *artículos* o *papers* nos referimos a artículos académicos o de investigación, estos artículos se publican en eventos de la disciplina (workshops, congresos, conferencias) o en revistas científicas, en estos artículos se pueden presentar resultados originales, revisiones de resultados existentes, o desarrollos innovadores.
 Si una persona desea enviar un ***paper*** a un evento que requiere una presentación del mismo, debe contemplar:
@@ -17,11 +18,11 @@ Para la comunicación de nuestros resultados existen diferentes opciones, entre 
 - Eventos internacionales de relevancia.
 - Revistas indexadas.
 
-Los workshops y conferencias nacionales constituyen el lugar ideal para nuestro “*bautismo de fuego*” en la publicación y presentación de trabajos. Los Workshops y Conferencias suelen estar numerados consecutivamente, y su realización suele ser anual y por lo general suelen tener un acrónimo que los identifica. Por Ej.: CACIC siglas del Congreso Argentino en Ciencias de la Computación
+Los workshops y conferencias nacionales constituyen el lugar ideal para comenzar a introducirnos en la publicación y presentación de trabajos. Los Workshops y Conferencias suelen estar numerados consecutivamente, y su realización suele ser anual y por lo general suelen tener un acrónimo que los identifica. Por Ej.: CACIC siglas del Congreso Argentino en Ciencias de la Computación
 
 ![[MI-Estructura-cong-work.png]]
 
-### Proceso para Aceptación en un Congreso y Revista
+##### Proceso para Aceptación en un Congreso y Revista
 
 ![[MI-proceso-congreso.png]]
 
@@ -71,7 +72,7 @@ Debe exponer toda la información necesaria para poder entender y reducir los re
 | Apéndice (Opcional)             | Demostraciones de teoremas, tablas de siglas, tablas de figuras, índices temáticos, etc. |
 
 - **Resumen o Abstract**: Breve síntesis del artículo, cubriendo tópico, método, hallazgos y conclusiones.
-- **Introducción**: Establece el contexto, referencia literatura relacionada, y explica el objetivo, enfoque y posible solución del problema en cuestión. Una introducción debe responder las siguientes preguntas: ¿Qué se estudia? ¿Por qué es relevante? ¿Qué se ha hecho previamente? ¿Cómo se contribuye a la solución?
+- **Introducción**: Establece el contexto, referencia, literatura relacionada, y explica el objetivo, enfoque y posible solución del problema en cuestión. Una introducción debe responder las siguientes preguntas: ¿Qué se estudia? ¿Por qué es relevante? ¿Qué se ha hecho previamente? ¿Cómo se contribuye a la solución?
 - **Preliminares**: Explica conceptos básicos necesarios para comprender el artículo, evitando redundancias, y refiriendo a literatura aceptada.
 - **Aporte y Resultados**: Sección crucial donde se detalla el objetivo de estudio y se presentan definiciones, propiedades, algoritmos, y pruebas que respaldan el aporte.
 - **Discusión**: Analiza ventajas y limitaciones de la propuesta con autocrítica. Las limitaciones no deben ser omitidas y es recomendable mencionar enfoques futuros para abordarlas.
@@ -82,6 +83,7 @@ Debe exponer toda la información necesaria para poder entender y reducir los re
 - **Apéndice**: Opcional. Puede contener tablas, demostraciones, códigos, listas de figuras, entre otros complementos al artículo.
 
 ---
+### Tipos de Papers
 
 Podemos a su vez establecer diferentes tipos de papers de acuerdo a su forma de, objetivos o profundidad, entre ellos podemos encontrar:
 
