--- a/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
+++ b/3° Año/Metodología de la Investigación/5. Comunicación de Resultados Científicos.md
@@ -85,7 +85,7 @@ Debe exponer toda la información necesaria para poder entender y reducir los re
 ---
 ### Tipos de Papers
 
-Podemos a su vez establecer diferentes tipos de papers de acuerdo a su forma de, objetivos o profundidad, entre ellos podemos encontrar:
+Podemos a su vez establecer diferentes tipos de papers de acuerdo a su forma, objetivos o profundidad, entre ellos podemos encontrar:
 
 - **Papers Argumentativos**: Presentan dos perspectivas de un tema. El autor defiende una posición, mostrando argumentos a favor y en contra, para enfatizar su análisis y propuesta.
 - **Papers que Comparan y Contrastan**: Analizan dos o más elementos, pudiendo ser autores, modelos o conceptos. Se busca clarificar diferencias y similitudes detalladamente.
