Se movieron algunas cosas de MI

--- a/3° Año/Metodología de la Investigación/1. Introducción.md
+++ b/3° Año/Metodología de la Investigación/1. Introducción.md
@@ -56,7 +56,7 @@ Las teorías científicas establecidas que forman parte del conocimiento cientí
 
 >[!caution] Navaja de Ockham
 >El principio de la Navaja de Ockham es fundamental en la ciencia y la metodología de investigación. Se utiliza para abogar por la simplicidad en la formulación de teorías científicas y en la resolución de problemas. La Navaja de Ockham sugiere que, cuando se busca una explicación para un fenómeno, se deben evitar las explicaciones innecesariamente complejas. En la investigación y la formulación de teorías científicas, se busca simplificar y reducir al mínimo las suposiciones y las variables para llegar a una teoría elegante y efectiva.
-#### Investigación: Hipótesis
+### La Hipótesis
 
 Investigación es un proceso activo, donde las hipótesis ayudan a que las actividades tengan un norte al que apuntar. Las predicciones de estas hipótesis son testeadas por experimentos y resultan en el desarrollo de otras tecnologías. Es posible que en una investigación se deban testear y refutar varias hipótesis antes de resolver el problema.
 Cuando se elige una hipótesis a testear se debe considerar:
@@ -69,13 +69,22 @@ Cuando se elige una hipótesis a testear se debe considerar:
 
 Si bien a veces suelen usarse indistintamente, las hipótesis no son teorías *per se*. Ya que, una hipótesis es una explicación sugerida para un fenómeno observable. También puede ser una predicción razonada de una posible correlación causal existente entre varios fenómenos.
 Por otro lado, una teoría, dentro de la ciencia, es una explicación probada y justificada mediante una serie de hechos comprobados y verificados. Puede contener varias hipótesis. Una teoría siempre debe estar respaldada por evidencia. Por otro lado, una hipótesis es apenas un posible resultado, que puede ser comprobado y refutado.
+Una hipótesis es una afirmación tentativa sujeta a verificación. Pueden ser explicaciones tentativas de la relación entre dos o más variables. La principal función de esta misma es de servir de guía para el estudio, proporcionar explicaciones, y apoyar la prueba de la teoría. La formulación de una hipótesis va a depender del alcance del estudio:
 
->[!example] Pseudo Ciencias
->Son incoherentes con el cuerpo teórico de disciplinas relacionadas, invalidando las explicaciones admitidas sin ofrecer alternativas mejores para la explicación de los mismos fenómenos ni reconocer la necesidad de hacerlo.
->Son inmutables. Al no tener bases experimentales, no cambian incluso ante nuevos descubrimientos (como excepción especial están las ciencias a priori, concretamente las matemáticas y la lógica). La máxima autoridad teórica se le sigue atribuyendo al fundador o fundadores de la disciplina, y sus enseñanzas son tratadas como escrituras sagradas.
->Utilizan ante el público un lenguaje oscuro, o emplean términos que tienen un significado preciso en ciencia con sentidos totalmente diferentes.
+- **Estudios Exploratorios**: Los estudios exploratorios se realizan cuando el objetivo es examinar algo poco investigado o desconocido. Los estudios exploratorios en pocas ocasiones constituyen un fin en sí mismos. Generalmente, determinan tendencias, identifican áreas, ambientes, contextos y situaciones de estudio, relaciones potenciales entre variables; o establecen el “tono” de investigaciones posteriores más elaboradas y rigurosas. En este tipo de investigaciones no se formula ningún tipo de hipótesis. Algunos ejemplos de estos estudios son las investigaciones relacionadas con la máquina de Turing o el estudio de los sistemas biométricos.
+- **Estudios Descriptivos**: Se busca especificar las propiedades, las características y los perfiles de personas, grupos, comunidades, procesos, objetos o cualquier otro fenómeno que se someta a un análisis. En este tipo de investigaciones se suelen formular hipótesis cunado se proporcionan hechos o datos. Estas hipótesis se utilizan, a veces en estudios descriptivos, para intentar predecir un dato o valor en una o más variables que se van a medir u observar.
+- **Estudios Correlacionales**: Este tipo de estudios tiene como finalidad conocer la relación o grado de asociación que exista entre dos o más conceptos, categorías o variables en una muestra o contexto en particular. En este tipo de estudios se plantean hipótesis de correlación, en las cuales el orden en que coloquemos las variables no es importante, es decir, ninguna variable antecede a la otra; no hay relación de causalidad.
+- **Estudios Explicativos**: Su interés se centra en explicar por qué ocurre un fenómeno y en qué condiciones se manifiesta o por qué sé relacionan dos o más variables. En este tipo de investigaciones se formulan hipótesis causales, este tipo de hipótesis no solamente afirma la o las relaciones entre dos o más variables y la manera en que se manifiestan, sino que además propone un “*sentido de entendimiento*” de las relaciones. Por Ej.: El uso de servicios en la nube provoca una mejora en la productividad de los trabajos realizados en equipo.
 
-#### Las Preguntas de Investigación
+>[!tldr] Las Variables
+>Son propiedades que pueden fluctuar y cuya variación es susceptible de medirse u observarse. Ejemplos de variables son el género, la presión arterial, el atractivo físico, el aprendizaje de conceptos, la religión, la resistencia de un material, la masa.
+
+#### Formas de Clasificación de las Hipótesis
+
+- **Hipótesis de Investigación**: Este tipo de hipótesis son descriptivas de un valor o dato pronosticado, correlacionales, de diferencia de grupos, o incluso causales.
+- **Hipótesis Nulas**: Las hipótesis nulas son, en cierto modo, el reverso de las hipótesis de investigación. Por Ej.: partiendo de la siguiente hipótesis "*El uso de servicios en la nube provoca una mejora en la productividad de los trabajos realizados en equipo*.", la hipótesis nula de esta sería la siguiente: "*El uso de servicios en la nube no provoca una mejora en la productividad de los trabajos realizados en equipo*."
+- **Hipótesis Alternativas**: Son posibilidades alternas de las hipótesis de investigación y nula, ofrecen una descripción o explicación distinta de las que proporcionan estas inicialmente, donde cada alternativa constituye una descripción distinta de las que proporcionan las hipótesis de investigación y nula. Por Ej.: partiendo de la hipótesis "*A mayor uso de clases virtuales, mayor es el rendimiento académico del alumno*". Una posible hipótesis alternativa podría ser: "A mayor uso de clases virtuales, mayor es el desinterés por participar en clase."
+### Las Preguntas de Investigación
 
 En un sentido amplio, el objetivo de la investigación en cualquier ciencia radica en *responder preguntas y adquirir conocimiento* acerca del “universo observable”. Las preguntas de investigación son el primer paso para comenzar una investigación, es la meta que buscaremos responder y será nuestra guía durante todo el proceso de investigación. No podemos comenzar a redactar o preparar un proyecto de investigación si no tenemos pregunta de investigación identificada. La pregunta de investigación tiene que cumplir 3
 condiciones indispensables:
@@ -95,3 +104,9 @@ Existe un protocolo a seguir para idear preguntas de investigación. Los 3 pasos
 	4. Preguntarse si el problema o asunto sucede en otro ámbito y preguntarse por qué o qué consecuencias tiene. Ej.: en bases de datos relacionales, ¿existe la inconsistencia? ¿Qué efectos tiene?
 	5. Preguntarse si el problema o asunto actual sucedía antes, o si el problema o asunto pasado sucede hoy en día. Ej.: antes de la existencia de sistemas abiertos/interconectados, ¿encontrábamos inconsistencias? ¿En qué medida?
 
+---
+
+>[!example] Pseudo Ciencias
+>Son incoherentes con el cuerpo teórico de disciplinas relacionadas, invalidando las explicaciones admitidas sin ofrecer alternativas mejores para la explicación de los mismos fenómenos ni reconocer la necesidad de hacerlo.
+>Son inmutables. Al no tener bases experimentales, no cambian incluso ante nuevos descubrimientos (como excepción especial están las ciencias a priori, concretamente las matemáticas y la lógica). La máxima autoridad teórica se le sigue atribuyendo al fundador o fundadores de la disciplina, y sus enseñanzas son tratadas como escrituras sagradas.
+>Utilizan ante el público un lenguaje oscuro, o emplean términos que tienen un significado preciso en ciencia con sentidos totalmente diferentes.
