--- a/3° Año/Metodología de Sistemas I/Unidad 9/3. SCRUM.md
+++ b/3° Año/Metodología de Sistemas I/Unidad 9/3. SCRUM.md
@@ -14,12 +14,12 @@ Al contrario que XP, SCRUM es mucho más complicado para poner en marcha y lleva
 
 ![[MS-scrum.png]]
 
-Dentro de esa estructura encontramos una serie de roles, dentro de los cuales se destaca el Product Owner, Scrum Master y equipo de desarrollo. Al mismo tiempo que hay una serie de eventos, los cuales son el Sprint planning, Daily scrum, Sprint Review, Sprint Retrospective. Y por último se encuentran los artefactos tales como el Product Backlog, Sprint Backlog e incremento.
+Dentro de esa estructura encontramos una serie de roles, dentro de los cuales se destaca el Product Owner, Scrum Master y equipo de desarrollo. Al mismo tiempo que hay una serie de eventos, los cuales son el Sprint planning, Daily Scrum, Sprint Review, Sprint Retrospective. Y por último se encuentran los artefactos tales como el Product Backlog, Sprint Backlog e incremento.
 
 #### Roles
 
-1. **Product Owner**: Es aquella persona que conoce el entorno del negocio y la visión del producto, tiene la función de representar a las partes interesadas en el software. Este rol es extremadamente importante, ya que es el product owner el encargado de generar las historias de usuario, ordenar las prioridades de los requerimientos, asegurando que estos sean claros, visibles y transparentes para todos, sin contar que es el que mantiene el ***Poduct Blacklog*** y resuelve las dudas del equipo de desarrollo.
-2. **Scrum Master**: Ayuda a todas las partes involucradas a comprender y adaptar los valores de SCRUM. Cumple una función de lider en el proceso de desarrollo, debido a que es la encargada de organizar y gestionar los cambios que van surgiendo durante el desarrollo.
+1. **Product Owner**: Es aquella persona que conoce el entorno del negocio y la visión del producto, tiene la función de representar a las partes interesadas en el software. Este rol es extremadamente importante, ya que es el product owner el encargado de generar las historias de usuario, ordenar las prioridades de los requerimientos, asegurando que estos sean claros, visibles y transparentes para todos, sin contar que es el que mantiene el ***Product Backlog*** y resuelve las dudas del equipo de desarrollo.
+2. **Scrum Master**: Ayuda a todas las partes involucradas a comprender y adaptar los valores de SCRUM. Cumple una función de líder en el proceso de desarrollo, debido a que es la encargada de organizar y gestionar los cambios que van surgiendo durante el desarrollo.
 3. **Equipo de desarrollo**: Es un equipo multidisciplinario que cubre todas las habilidades necesarias para generar el resultado. Idealmente, todo el equipo de desarrollo debe conocer Scrum, ya que son los auténticos responsables del resultado. Este grupo se autogestiona y autoorganiza, es decir, dispone de atribuciones suficientes en la organización para tomar decisiones sobre cómo realizar su trabajo.
 
 #### Artefactos
@@ -34,7 +34,7 @@ Dentro de esa estructura encontramos una serie de roles, dentro de los cuales se
 
 #### Eventos
 
-1. **Sprint Planinig**: Se define el ***Sprint Backlog***, es decir, las tareas que se van a implementar para ese ***incremento,*** se define la duración del sprint y la fecha de la reunión de revisión. Esta reunión marca el inicio de cada sprint y por lo general es el ***Scrum Master*** el responsable de su organización y gestión.
-2. **Daily Scrum**: Es una reunión diaria que se lleva a cabo durante un Sprint, tiene como objetivo sincronizar, revisar y adaptar. Suelen durar alrededor de 15 minutos y siempre se realiza a la misma hora. En estas reuniones cada miembro del equipo responde a tres preguntas: ¿Qué hice ayer?, ¿Qué voy a hacer hoy?, y ¿Qué impedimentos tengo?.
+1. **Sprint Planning**: Se define el ***Sprint Backlog***, es decir, las tareas que se van a implementar para ese ***incremento,*** se define la duración del sprint y la fecha de la reunión de revisión. Esta reunión marca el inicio de cada sprint y por lo general es el ***Scrum Master*** el responsable de su organización y gestión.
+2. **Daily Scrum**: Es una reunión diaria que se lleva a cabo durante un Sprint, tiene como objetivo sincronizar, revisar y adaptar. Suelen durar alrededor de 15 minutos y siempre se realiza a la misma hora. En estas reuniones cada miembro del equipo responde a tres preguntas: ¿Qué hice ayer?, ¿Qué voy a hacer hoy?, y ¿Qué impedimentos tengo?
 3. **Sprint Review**: Es una reunión, de una duración máxima de 4 horas, que se realiza al final de cada sprint entre el equipo y las partes interesadas, para mostrar el incremento construido, su principal función es la de generar retroalimentación entre todos los participantes y adaptar los siguientes ciclos de desarrollo, maximizando el valor del producto desarrollado. Suele incluir una demo del producto.
-4. **Sprint Restrospective**: Es una reunión que se lleva a cabo al final de cada ciclo de desarrollo, esta reunión va destinada a revisar la adecuación del propio proceso de Scrum utilizado y proponer mejoras al proceso de desarrollo, es por eso que en esta etapa participan los integrantes de todos los roles.
+4. **Sprint Retrospective**: Es una reunión que se lleva a cabo al final de cada ciclo de desarrollo, esta reunión va destinada a revisar la adecuación del propio proceso de Scrum utilizado y proponer mejoras al proceso de desarrollo, es por eso que en esta etapa participan los integrantes de todos los roles.
